--- a/P18推量.md
+++ b/P18推量.md
@@ -24,7 +24,7 @@
 其实是动词的意向形，也可以表达推测的语气，但是其含义容易和意向形混淆</br>
 意向形：表达talker想要做什么或者talker想邀请hearer一起做什么；</br>
 推测：只是talker的猜测；</br>
-所以现在日语中一般使用だろう表示推测
+所以现代日语中一般使用だろう表示推测
 
 (彼は帰ろう。)
 彼は帰るだろう。</br>
