--- a/P19様態伝聞推定比況.md
+++ b/P19様態伝聞推定比況.md
@@ -77,9 +77,9 @@
 | この道は 、 駅まで続いている<u>みたい</u>です。                | みたい，意义一样，但是只用在口语中，表示无根据地推测 |
 
 ## 5. 四者的区分
-|                                           |                                                      |                                                                                                         |
-| ----------------------------------------- | ---------------------------------------------------- | ------------------------------------------------------------------------------------------------------- |
-| 雨が降るそうだ。                          | 伝聞,直接转述                                        | 終止形＋そうだ                                                                                          |
-| 雨が降りそうだ。                          | 様態,根据眼前景象做出主观判断                        | 連用形＋そうだ                                                                                          |
-| 雨が降るらしい。                          | 推定,根据可靠的客观信息加以判断                      | 終止形＋らしい</br>~~だ~~＋らしい                                                                       |
-| あめが降るようだ。</br>雨が降るみたいだ。 | 比況,根据自身的根据做出主观判断</br>みたい只用于口语 | 連体形＋ようだ</br>            格助詞「の」＋ようだ</br>一部の連体詞（この・その・あの・どの…）＋ようだ |
+|                                         |                                                          |                                                                                                         |
+| --------------------------------------- | -------------------------------------------------------- | ------------------------------------------------------------------------------------------------------- |
+| 雨が降るそうだ。                        | 伝聞</br>直接转述                                        | 終止形＋そうだ                                                                                          |
+| 雨が降りそうだ。                        | 様態</br>根据眼前景象做出主观判断                        | 連用形＋そうだ                                                                                          |
+| 雨が降るらしい。                        | 推定</br>根据可靠的客观信息加以判断                      | 終止形＋らしい</br>~~だ~~＋らしい                                                                       |
+| 雨が降るようだ。</br>雨が降るみたいだ。 | 比況</br>根据自身的根据做出主观判断</br>みたい只用于口语 | 連体形＋ようだ</br>            格助詞「の」＋ようだ</br>一部の連体詞（この・その・あの・どの…）＋ようだ |
